@@ -5,6 +5,7 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
+import java.util.Set;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apereo.cas.authentication.principal.DefaultPrincipalAttributesRepository;
@@ -13,11 +14,13 @@ import org.apereo.cas.configuration.model.support.mfa.BaseMultifactorAuthenticat
 import org.apereo.cas.services.CasRegisteredService;
 import org.apereo.cas.services.DefaultRegisteredServiceMultifactorPolicy;
 import org.apereo.cas.services.DefaultRegisteredServiceProperty;
+import org.apereo.cas.services.OidcRegisteredService;
 import org.apereo.cas.services.RegisteredService;
 import org.apereo.cas.services.RegisteredServiceProperty;
 import org.apereo.cas.services.ReturnAllAttributeReleasePolicy;
+import org.apereo.cas.services.ServiceRegistryListener;
 import org.apereo.cas.services.ServicesManager;
-import org.apereo.cas.support.oauth.services.OAuthRegisteredService;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -32,6 +35,7 @@ import lombok.extern.slf4j.Slf4j;
 
 import y9.util.Y9Result;
 
+@Lazy(false)
 @RestController
 @RequestMapping(value = "/api/service", produces = MediaType.APPLICATION_JSON_VALUE)
 @Slf4j
@@ -42,6 +46,7 @@ public class ServiceController {
 
     private final ServicesManager servicesManager;
     private final CasConfigurationProperties casConfigurationProperties;
+    private final Collection<ServiceRegistryListener> serviceRegistryListeners;
 
     @PostMapping(value = "/delete")
     public Y9Result<RegisteredService> delete(long id) {
@@ -77,20 +82,21 @@ public class ServiceController {
         String name, @RequestParam(required = false) String description,
         @RequestParam(required = false) String systemId, @RequestParam(required = false) String logoutUrl) {
         try {
-            OAuthRegisteredService oAuthRegisteredService = new OAuthRegisteredService();
+            OidcRegisteredService svc = new OidcRegisteredService();
             if (id != null) {
                 // 更新
-                oAuthRegisteredService.setId(id);
+                svc.setId(id);
             }
-            oAuthRegisteredService.setClientId(clientId);
-            oAuthRegisteredService.setClientSecret(clientSecret);
-            oAuthRegisteredService.setServiceId(serviceId);
-            oAuthRegisteredService.setName(name);
-            oAuthRegisteredService.setDescription(description);
-            oAuthRegisteredService
-                .setTheme(theme.isBlank() ? casConfigurationProperties.getTheme().getDefaultThemeName() : theme);
-            oAuthRegisteredService.setEvaluationOrder(100);
-            oAuthRegisteredService.setLogoutUrl(logoutUrl);
+            svc.setClientId(clientId);
+            svc.setClientSecret(clientSecret);
+            svc.setServiceId(serviceId);
+            svc.setName(name);
+            svc.setDescription(description);
+            svc.setTheme(
+                StringUtils.isBlank(theme) ? casConfigurationProperties.getTheme().getDefaultThemeName() : theme);
+            svc.setEvaluationOrder(100);
+            svc.setLogoutUrl(logoutUrl);
+            svc.setScopes(Set.of("openid", "y9"));
             ReturnAllAttributeReleasePolicy returnAllAttributeReleasePolicy = new ReturnAllAttributeReleasePolicy();
             returnAllAttributeReleasePolicy.setAuthorizedToReleaseCredentialPassword(true);
             returnAllAttributeReleasePolicy.setAuthorizedToReleaseProxyGrantingTicket(true);
@@ -98,20 +104,25 @@ public class ServiceController {
             DefaultPrincipalAttributesRepository defaultPrincipalAttributesRepository =
                 new DefaultPrincipalAttributesRepository();
             returnAllAttributeReleasePolicy.setPrincipalAttributesRepository(defaultPrincipalAttributesRepository);
-            oAuthRegisteredService.setAttributeReleasePolicy(returnAllAttributeReleasePolicy);
-            oAuthRegisteredService.setSupportedGrantTypes(
+            svc.setAttributeReleasePolicy(returnAllAttributeReleasePolicy);
+            svc.setSupportedGrantTypes(
                 new HashSet<>(Arrays.asList("authorization_code", "password", "client_credentials", "refresh_token")));
-            oAuthRegisteredService.setSupportedResponseTypes(new HashSet<>(Arrays.asList("code", "token")));
-            oAuthRegisteredService.setBypassApprovalPrompt(true);
-            oAuthRegisteredService.setGenerateRefreshToken(true);
-            oAuthRegisteredService.setRenewRefreshToken(true);
-            oAuthRegisteredService.setJwtAccessToken(false);
+            svc.setSupportedResponseTypes(new HashSet<>(Arrays.asList("code", "token")));
+            svc.setBypassApprovalPrompt(true);
+            svc.setGenerateRefreshToken(true);
+            svc.setRenewRefreshToken(true);
+            svc.setJwtAccessToken(true);
             if (StringUtils.isNotBlank(systemId)) {
                 Map<String, RegisteredServiceProperty> propertyMap = new HashMap<>();
                 propertyMap.put(SYSTEM_KEY, new DefaultRegisteredServiceProperty(systemId));
-                oAuthRegisteredService.setProperties(propertyMap);
+                svc.setProperties(propertyMap);
             }
-            servicesManager.save(oAuthRegisteredService);
+            if (serviceRegistryListeners != null) {
+                for (ServiceRegistryListener serviceRegistryListener : serviceRegistryListeners) {
+                    serviceRegistryListener.postLoad(svc);
+                }
+            }
+            servicesManager.save(svc);
 
             servicesManager.load();
             return Y9Result.successMsg("刷新成功,总共：" + servicesManager.count() + " 条记录");
@@ -144,8 +155,13 @@ public class ServiceController {
                 BaseMultifactorAuthenticationProviderProperties.MultifactorAuthenticationProviderFailureModes.CLOSED);
             defaultRegisteredServiceMultifactorPolicy.setBypassEnabled(false);
             regexRegisteredService.setMultifactorAuthenticationPolicy(defaultRegisteredServiceMultifactorPolicy);
-            servicesManager.save(regexRegisteredService);
+            if (serviceRegistryListeners != null) {
+                for (ServiceRegistryListener serviceRegistryListener : serviceRegistryListeners) {
+                    serviceRegistryListener.postLoad(regexRegisteredService);
+                }
+            }
 
+            servicesManager.save(regexRegisteredService);
             servicesManager.load();
             return Y9Result.successMsg("刷新成功,总共：" + servicesManager.count() + " 条记录");
         } catch (Exception e) {
